--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "electronVersion": "1.3.4",
   "scripts": {
-    "start": "electron . &"
+    "start": "electron . &",
+    "build": "electron-packager ./ --platform=darwin --arch=x64 --out=./dist --version=$npm_package_electronVersion"
   },
   "dependencies": {
     "electron": "^1.3.4",
@@ -25,9 +26,9 @@
     "index.css"
   ],
   "keywords": [
-    "bitcoins",
-    "crypto-currency",
-    "menubar-item",
+    "bitcoin",
+    "cryptocurrency",
+    "menubar",
     "electron-app"
   ]
 }
