--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "build": "electron-packager ./ --platform=darwin --arch=x64 --out=./dist --version=$npm_package_electronVersion"
   },
   "dependencies": {
-    "electron": "^1.3.4",
+    "electron-debug": "^1.0.1",
     "menubar": "^5.1.0"
+  },
+  "devDependencies": {
+    "electron-packager": "^7.7.0",
+    "electron": "^1.3.4"
   },
   "files": [
     "index.js",
